--- a/CardsOfHearthstone/app/src/main/res/values/strings.xml
+++ b/CardsOfHearthstone/app/src/main/res/values/strings.xml
@@ -76,4 +76,5 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_help">HelpActivity</string>
 </resources>
