--- a/CardsOfHearthstone/app/src/main/res/values/strings.xml
+++ b/CardsOfHearthstone/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">CardsOfHearthstone</string>
     <string name="action_settings">Settings</string>
+    <string name="action_recycler">Cards</string>
+    <string name="action_main">Home</string>
+    <string name="action_help">Help</string>
     <string name="title_activity_recycler">RecyclerActivity</string>
     <string name="title_activity_settings">Settings</string>
 
