--- a/CardsOfHearthstone/app/src/main/res/values/strings.xml
+++ b/CardsOfHearthstone/app/src/main/res/values/strings.xml
@@ -7,21 +7,26 @@
     <string name="action_refresh">Refresh</string>
     <string name="title_activity_recycler">RecyclerActivity</string>
     <string name="title_activity_settings">Settings</string>
+    <string-array name="Language">
+        <item>English (US)</item>
+        <item>Turkish</item>
+
+    </string-array>
 
     <!-- Strings related to Settings -->
 
     <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
+    <string name="pref_header_general" translatable="false">General</string>
 
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
+    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
+    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
         based on your message history
     </string>
 
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
+    <string name="pref_title_display_name" translatable="false">Display name</string>
+    <string name="pref_default_display_name" translatable="false">John Smith</string>
 
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
+    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
     <string-array name="pref_example_list_titles">
         <item>Always</item>
         <item>When possible</item>
@@ -34,9 +39,9 @@
     </string-array>
 
     <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
+    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
 
-    <string name="pref_title_sync_frequency">Sync frequency</string>
+    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
     <string-array name="pref_sync_frequency_titles">
         <item>15 minutes</item>
         <item>30 minutes</item>
@@ -81,4 +86,7 @@
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="title_activity_detail">DetailActivity</string>
     <string name="title_activity_help">HelpActivity</string>
+    <string name="welcome_to_cards_of_hearthstone">Welcome to Cards Of Hearthstone</string>
+    <string name="start_apllication">Start Apllication</string>
+    <string name="how_to_use">HOW TO USE</string>
 </resources>
